# jail-ai

./: .envrc  .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  Containerfile  Cross.toml  IMAGE_TAGGING_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  LAYERED_IMAGES_SUMMARY.md  Makefile  NIX_FLAKES_SUPPORT.md  README.md  TODO.md  build-ebpf.sh  flake.nix  test_ebpf_lifecycle.sh
.claude/: settings.local.json
.forgejo/workflows/: ci.yaml  release.yaml
.github/workflows/: release.yml  rust.yml
config/: Containerfile  README.md
containerfiles/: README.md  agent-claude-code-router.Containerfile  agent-claude.Containerfile  agent-coderabbit.Containerfile  agent-codex.Containerfile  agent-copilot.Containerfile  agent-cursor.Containerfile  agent-gemini.Containerfile  agent-jules.Containerfile  agent-pi.Containerfile  aws.Containerfile  base.Containerfile  cpp.Containerfile  csharp.Containerfile  gcp.Containerfile  golang.Containerfile  java.Containerfile  kubernetes.Containerfile  nix.Containerfile  nodejs.Containerfile  php.Containerfile  python.Containerfile  rust.Containerfile  terraform.Containerfile
docs/: EBPF_HELPER_MIGRATION.md  EBPF_SECURITY.md  EBPF_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  TROUBLESHOOTING.md  cloud-layers-quick-ref.md  cloud-layers.md  jail-ai.1  jail-ai.1.md
docs/specs/: BLOCK_HOST_USAGE.md  EBPF_IMPLEMENTATION.md  GIT_CONFIG_VERIFICATION_REPORT.md  I18N_README.md  UPGRADE_DETECTION_IMPLEMENTATION.md
examples/: README.md  jail-ai.Containerfile
jail-ai-ebpf/: Cargo.toml  README.md
jail-ai-ebpf-loader/: Cargo.toml
jail-ai-ebpf-loader/src/: main.rs  protocol.rs
jail-ai-ebpf/src/: main.rs
scripts/: debug-ebpf.sh  test-block-host.sh  update-cloud-versions.sh
src/: agent_commands.rs  backend.rs  cli.rs  config.rs  error.rs  git_gpg.rs  i18n.rs  image.rs  image_layers.rs  image_parallel.rs  jail.rs  jail_setup.rs  main.rs  project_detection.rs  state.rs  strings.rs  worktree.rs
src/agents/: claude.rs  claude_code_router.rs  coderabbit.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  jules.rs  mod.rs  pi.rs
src/backend/: docker.rs  podman.rs  systemd_nspawn.rs
src/ebpf/: host_ips.rs  loader_client.rs  mod.rs  monitor.rs
src/tui/: mod.rs
