[workspace]
members = ["jail-ai-ebpf", "jail-ai-ebpf-loader"]
# Exclude eBPF crate from default builds (requires special build flags)
default-members = [".", "jail-ai-ebpf-loader"]
resolver = "2"

[workspace.dependencies]
aya = "0.12"
aya-ebpf = "0.1"

# eBPF-specific profile overrides
[profile.dev.package.jail-ai-ebpf]
opt-level = 3

[profile.release.package.jail-ai-ebpf]
opt-level = 3
codegen-units = 1


[package]
name = "jail-ai"
version = "0.46.2"
edition = "2021"
authors = ["Cyril Levis <git@levis.name>", "Max Baz <max@baz.nu>"]
license = "MIT OR Apache-2.0"
description = "A Rust-based jail wrapper for sandboxing AI agents (Claude, Copilot, Cursor, Gemini, Jules) using podman with isolation, resource limits, and workspace management"
readme = "README.md"
homepage = "https://github.com/cyrinux/jail-ai"
repository = "https://github.com/cyrinux/jail-ai"
documentation = "https://docs.rs/jail-ai"
keywords = ["podman", "sandbox", "container", "ai-agent", "isolation"]
categories = ["command-line-utilities", "development-tools", "virtualization"]
default-run = "jail-ai"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.17"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
tempfile = "3.20"
async-trait = "0.1"
sha2 = "0.10.9"
hex = "0.4"
which = "7.0"
indicatif = "0.18.0"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
