[package]
name = "jail-ai-ebpf-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
caps = "0.5"  # For dropping capabilities
libc = "0.2"  # For euid check

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"
